--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,34 @@
 body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  
+  max-width: 1140px;
+  margin: 2em auto !important;
+  
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
+}
+
+
+.container > div {
+  border-radius: 5px;
+  padding: 10px;
+  box-shadow: 2px 2px 5px rgb(207, 207, 207);
+  border: 1px solid gray;
+}
+.container {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-auto-rows: minmax(100px, auto);
+  grid-auto-columns: minmax(100px, auto);
+  grid-gap: 20px;
+}
+
+.container-details {
+  max-width: 300px;
+  margin: auto;
+  box-shadow: 2px 2px 5px rgb(207, 207, 207);
+  border: 1px solid gray;
+  text-align: left;
 }
